# rez

./: Cargo.toml  README.md  azure-pipelines.yml
src/: lib.rs
